<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/txtNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/textbox_hint"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:autofillHints="" />

        <Spinner
            android:id="@+id/spnUnit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/haily_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haily_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"/>

                <TextView
                    android:id="@+id/lblHaily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"/>
            </TableRow>
            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/dam_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dam_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"/>

                <TextView
                    android:id="@+id/lblDam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"/>
            </TableRow>
            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/km_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/km_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"/>

                <TextView
                    android:id="@+id/lblKm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"/>
            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phy_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phy_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"/>

                <TextView
                    android:id="@+id/lblPhy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"/>
            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/met_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/met_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

                <TextView
                    android:id="@+id/lblMet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/yar_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yar_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

                <TextView
                    android:id="@+id/lblYar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fot_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fot_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

                <TextView
                    android:id="@+id/lblFot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/inch_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inch_unit"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

                <TextView
                    android:id="@+id/lblInch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />

            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>